--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -57,7 +57,7 @@ jobs:
     env:
       Solution_Name: Library.sln  # Укажите название вашего решения
       Test_Project_Path: TestLibrary\TestLibrary.csproj  # Путь к вашему тестовому проекту
-      Wap_Project_Directory: Library  # Каталог проекта упаковки
+      Wap_Project_Directory: C:\Users\il226\source\repos\Library  # Каталог проекта упаковки
       Wap_Project_Path: Library\Library1.wapproj  # Путь к WAP проекту
 
     steps:
